--- a/Vegita-master/EDA/EDA.ipynb
+++ b/Vegita-master/EDA/EDA.ipynb
@@ -6,7 +6,7 @@
       "name": "배추가격 예측하기",
       "provenance": [],
       "mount_file_id": "1uvUU0QlqebYj-3enzzDgFZuGbJ6Yb41S",
-      "authorship_tag": "ABX9TyPOPm9gfLiS+/KXO+SLvzTi",
+      "authorship_tag": "ABX9TyOxCJC/uBvrPtEB1ABlqE2c",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1055,7 +1055,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/jangsik-park/Project_AI-Web-page_linear-regression/blob/master/%EB%B0%B0%EC%B6%94%EA%B0%80%EA%B2%A9_%EC%98%88%EC%B8%A1%ED%95%98%EA%B8%B0.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/jangsik-park/Project_AI-Web-page_linear-regression/blob/master/Vegita-master/EDA/EDA.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -1082,7 +1082,7 @@
         "import plotly.express as px\n",
         "from pandas_profiling import ProfileReport"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1095,7 +1095,7 @@
         "\n",
         "!pip install pandas-profiling==2.7.1"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1114,7 +1114,7 @@
         "df = pd.read_csv(\"/content/drive/MyDrive/Colab Notebooks/vegita/price data.csv\",encoding='cp949')\n",
         "df.head()"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1220,8 +1220,7 @@
       "cell_type": "code",
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "id": "ps-dkVUww54X",
         "outputId": "e8f196a1-d732-423f-8016-0abd77e90988"
@@ -1231,7 +1230,7 @@
         "\n",
         "df.shape"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1269,7 +1268,7 @@
         "\n",
         "df['avgPrice'].astype(int).plot.hist()"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1308,8 +1307,7 @@
       "cell_type": "code",
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "id": "f_UfNObZ0JAv",
         "outputId": "aae8e390-f158-4e14-f6f1-3c1adfe212ef"
@@ -1319,7 +1317,7 @@
         "\n",
         "df['avgPrice'].mean()"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1393,7 +1391,7 @@
         "from pandas_profiling import ProfileReport\n",
         "profile = ProfileReport(df, minimal=True).to_notebook_iframe()"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -5292,6 +5290,16 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "blpy5CZaEAke"
+      },
+      "source": [
+        "⚡ Warnings에서 얻은 결과를 통해 날짜 변수를 traing data에서 제거하였습니다. <br>\n",
+        "⚡ 강수량 정보에서 0이 많다는 결과가 나왔으나, 이는 무시하고 진행하였습니다."
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "colab": {
@@ -5312,7 +5320,7 @@
         "     title='Napa cabbage Prices'\n",
         " )"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
