Colaboratory를 통해 생성됨

--- a/Vegita-master/EDA/EDA.ipynb
+++ b/Vegita-master/EDA/EDA.ipynb
@@ -6,7 +6,7 @@
       "name": "배추가격 예측하기",
       "provenance": [],
       "mount_file_id": "1uvUU0QlqebYj-3enzzDgFZuGbJ6Yb41S",
-      "authorship_tag": "ABX9TyOxCJC/uBvrPtEB1ABlqE2c",
+      "authorship_tag": "ABX9TyMUgnBpABclgxFSkwd4ldgo",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -5296,7 +5296,10 @@
       },
       "source": [
         "⚡ Warnings에서 얻은 결과를 통해 날짜 변수를 traing data에서 제거하였습니다. <br>\n",
-        "⚡ 강수량 정보에서 0이 많다는 결과가 나왔으나, 이는 무시하고 진행하였습니다."
+        "⚡ 강수량 정보에서 0이 많다는 결과가 나왔으나, 이는 무시하고 진행하였습니다. <br>\n",
+        "⚡ 평균 온도는 굳이 사용하지 않아도 될 것 같아서, train data에서 제거 하였습니다.\n",
+        "\n",
+        "- 원래는 target변수와의 상관관계를 구해서 객관적인 근거로 제거하여야 했었는데, 저의 기술 부족으로 그렇게 하지 못 했습니다.\n"
       ]
     },
     {
